<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.hisham.baseto.domain.viewmodels.home.HomeViewModel" />

        <variable
            name="cartViewModel"
            type="com.hisham.baseto.domain.viewmodels.cart.CartViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:backgroundTint="@color/blue"
                android:contentDescription="@string/app_name"
                android:theme="@style/Theme.MaterialComponents.Light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/product_info"
                app:titleTextColor="@color/white" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:isScrollContainer="true"
            android:id="@+id/scrollLayout"
            app:productInfo="@{viewModel.loading}"
            tools:context=".presentation.fragments.product.ProductDetailsFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/hg_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="20dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/hg_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_end="20dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/hg_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="20dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/hg_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="20dp" />


                <ImageView
                    android:id="@+id/productImageView"
                    android:layout_width="0dp"
                    android:layout_height="300dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintEnd_toEndOf="@id/hg_end"
                    app:layout_constraintStart_toStartOf="@id/hg_start"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_goneMarginTop="20dp"
                     />

                <TextView
                    android:id="@+id/productName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textSize="22sp"
                    app:layout_constraintEnd_toEndOf="@id/hg_end"
                    app:layout_constraintStart_toStartOf="@id/hg_start"
                    app:layout_constraintTop_toBottomOf="@id/productImageView"
                     />

                <TextView
                    android:id="@+id/productPrice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textSize="26sp"
                    app:layout_constraintEnd_toEndOf="@id/hg_end"
                    app:layout_constraintStart_toStartOf="@id/hg_start"
                    app:layout_constraintTop_toBottomOf="@id/productName"
                     />

                <Button
                    android:id="@+id/addToCartBTN"
                    buttonStatus="@{cartViewModel.addToCartLoading}"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="20dp"
                    android:background="@color/blue"
                    android:backgroundTint="@color/blue"
                    android:text="@string/add_to_cart"
                    app:layout_constraintEnd_toEndOf="@id/hg_end"
                    app:layout_constraintStart_toStartOf="@id/hg_start"
                    app:layout_constraintTop_toBottomOf="@id/productPrice"
                   />

                <ProgressBar
                    android:id="@+id/cart_loading_wheel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:visibility="gone"
                    app:apiStatus="@{cartViewModel.addToCartLoading}"
                    app:layout_constraintTop_toTopOf="@id/addToCartBTN"
                    app:layout_constraintEnd_toEndOf="@id/hg_start"
                    app:layout_constraintStart_toStartOf="@id/hg_end"
                    app:layout_constraintBottom_toBottomOf="@id/addToCartBTN" />

                <TextView
                    android:id="@+id/productDesc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@id/hg_end"
                    app:layout_constraintStart_toStartOf="@id/hg_start"
                    app:layout_constraintTop_toBottomOf="@id/addToCartBTN"
                     />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
        <ProgressBar
            android:id="@+id/status_loading_wheel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:apiStatus="@{viewModel.loading}" />
    </LinearLayout>

</layout>